// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders a table with selectable rows 1`] = `
Snapshot Diff:
- First value
+ Second value

@@ -109,11 +109,11 @@
          </td>
          <td
            class=""
          >
            <div>
-             Not Selected
+             Selected
            </div>
          </td>
          <td
            class=""
          >
@@ -165,11 +165,11 @@
          </td>
          <td
            class=""
          >
            <div>
-             Not Selected
+             Selected
            </div>
          </td>
          <td
            class=""
          >
@@ -221,11 +221,11 @@
          </td>
          <td
            class=""
          >
            <div>
-             Not Selected
+             Selected
            </div>
          </td>
          <td
            class=""
          >
@@ -277,11 +277,11 @@
          </td>
          <td
            class=""
          >
            <div>
-             Not Selected
+             Selected
            </div>
          </td>
          <td
            class=""
          >
@@ -333,11 +333,11 @@
          </td>
          <td
            class=""
          >
            <div>
-             Not Selected
+             Selected
            </div>
          </td>
          <td
            class=""
          >
@@ -389,11 +389,11 @@
          </td>
          <td
            class=""
          >
            <div>
-             Not Selected
+             Selected
            </div>
          </td>
          <td
            class=""
          >
@@ -426,15 +426,22 @@
          </td>
        </tr>
      </tbody>
    </table>
    <p>
-     Selected Rows: 0
+     Selected Rows: 6
    </p>
    <pre>
      <code>
        {
-   "selectedRows": []
+   "selectedRows": [
+     "0",
+     "1",
+     "2",
+     "2.0",
+     "2.1",
+     "3"
+   ]
  }
      </code>
    </pre>
  </DocumentFragment>
`;

exports[`renders a table with selectable rows 2`] = `
Snapshot Diff:
- First value
+ Second value

@@ -109,11 +109,11 @@
          </td>
          <td
            class=""
          >
            <div>
-             Selected
+             Not Selected
            </div>
          </td>
          <td
            class=""
          >
@@ -165,11 +165,11 @@
          </td>
          <td
            class=""
          >
            <div>
-             Selected
+             Not Selected
            </div>
          </td>
          <td
            class=""
          >
@@ -221,11 +221,11 @@
          </td>
          <td
            class=""
          >
            <div>
-             Selected
+             Not Selected
            </div>
          </td>
          <td
            class=""
          >
@@ -277,11 +277,11 @@
          </td>
          <td
            class=""
          >
            <div>
-             Selected
+             Not Selected
            </div>
          </td>
          <td
            class=""
          >
@@ -333,11 +333,11 @@
          </td>
          <td
            class=""
          >
            <div>
-             Selected
+             Not Selected
            </div>
          </td>
          <td
            class=""
          >
@@ -389,11 +389,11 @@
          </td>
          <td
            class=""
          >
            <div>
-             Selected
+             Not Selected
            </div>
          </td>
          <td
            class=""
          >
@@ -426,22 +426,15 @@
          </td>
        </tr>
      </tbody>
    </table>
    <p>
-     Selected Rows: 6
+     Selected Rows: 0
    </p>
    <pre>
      <code>
        {
-   "selectedRows": [
-     "0",
-     "1",
-     "2",
-     "2.0",
-     "2.1",
-     "3"
-   ]
+   "selectedRows": []
  }
      </code>
    </pre>
  </DocumentFragment>
`;

exports[`renders a table with selectable rows 3`] = `
Snapshot Diff:
- First value
+ Second value

@@ -109,11 +109,11 @@
          </td>
          <td
            class=""
          >
            <div>
-             Not Selected
+             Selected
            </div>
          </td>
          <td
            class=""
          >
@@ -221,11 +221,11 @@
          </td>
          <td
            class=""
          >
            <div>
-             Not Selected
+             Selected
            </div>
          </td>
          <td
            class=""
          >
@@ -277,11 +277,11 @@
          </td>
          <td
            class=""
          >
            <div>
-             Not Selected
+             Selected
            </div>
          </td>
          <td
            class=""
          >
@@ -333,11 +333,11 @@
          </td>
          <td
            class=""
          >
            <div>
-             Not Selected
+             Selected
            </div>
          </td>
          <td
            class=""
          >
@@ -426,15 +426,20 @@
          </td>
        </tr>
      </tbody>
    </table>
    <p>
-     Selected Rows: 0
+     Selected Rows: 4
    </p>
    <pre>
      <code>
        {
-   "selectedRows": []
+   "selectedRows": [
+     "0",
+     "2",
+     "2.0",
+     "2.1"
+   ]
  }
      </code>
    </pre>
  </DocumentFragment>
`;

exports[`renders a table with selectable rows 4`] = `
Snapshot Diff:
- First value
+ Second value

@@ -221,11 +221,11 @@
          </td>
          <td
            class=""
          >
            <div>
-             Selected
+             Not Selected
            </div>
          </td>
          <td
            class=""
          >
@@ -277,11 +277,11 @@
          </td>
          <td
            class=""
          >
            <div>
-             Selected
+             Not Selected
            </div>
          </td>
          <td
            class=""
          >
@@ -333,11 +333,11 @@
          </td>
          <td
            class=""
          >
            <div>
-             Selected
+             Not Selected
            </div>
          </td>
          <td
            class=""
          >
@@ -426,20 +426,17 @@
          </td>
        </tr>
      </tbody>
    </table>
    <p>
-     Selected Rows: 4
+     Selected Rows: 1
    </p>
    <pre>
      <code>
        {
    "selectedRows": [
-     "0",
-     "2",
-     "2.0",
-     "2.1"
+     "0"
    ]
  }
      </code>
    </pre>
  </DocumentFragment>
`;

exports[`renders a table with selectable rows 5`] = `
Snapshot Diff:
- First value
+ Second value

@@ -277,11 +277,11 @@
          </td>
          <td
            class=""
          >
            <div>
-             Not Selected
+             Selected
            </div>
          </td>
          <td
            class=""
          >
@@ -426,17 +426,18 @@
          </td>
        </tr>
      </tbody>
    </table>
    <p>
-     Selected Rows: 1
+     Selected Rows: 2
    </p>
    <pre>
      <code>
        {
    "selectedRows": [
-     "0"
+     "0",
+     "2.0"
    ]
  }
      </code>
    </pre>
  </DocumentFragment>
`;

exports[`renders a table with selectable rows 6`] = `
Snapshot Diff:
- First value
+ Second value

@@ -221,11 +221,11 @@
          </td>
          <td
            class=""
          >
            <div>
-             Not Selected
+             Selected
            </div>
          </td>
          <td
            class=""
          >
@@ -333,11 +333,11 @@
          </td>
          <td
            class=""
          >
            <div>
-             Not Selected
+             Selected
            </div>
          </td>
          <td
            class=""
          >
@@ -426,18 +426,20 @@
          </td>
        </tr>
      </tbody>
    </table>
    <p>
-     Selected Rows: 2
+     Selected Rows: 4
    </p>
    <pre>
      <code>
        {
    "selectedRows": [
      "0",
-     "2.0"
+     "2.0",
+     "2.1",
+     "2"
    ]
  }
      </code>
    </pre>
  </DocumentFragment>
`;

exports[`renders a table with selectable rows 7`] = `
Snapshot Diff:
- First value
+ Second value

@@ -221,11 +221,11 @@
          </td>
          <td
            class=""
          >
            <div>
-             Selected
+             Not Selected
            </div>
          </td>
          <td
            class=""
          >
@@ -333,11 +333,11 @@
          </td>
          <td
            class=""
          >
            <div>
-             Selected
+             Not Selected
            </div>
          </td>
          <td
            class=""
          >
@@ -426,20 +426,18 @@
          </td>
        </tr>
      </tbody>
    </table>
    <p>
-     Selected Rows: 4
+     Selected Rows: 2
    </p>
    <pre>
      <code>
        {
    "selectedRows": [
      "0",
-     "2.0",
-     "2.1",
-     "2"
+     "2.0"
    ]
  }
      </code>
    </pre>
  </DocumentFragment>
`;
